--- a/templates/result.html
+++ b/templates/result.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Viesti</title>
+  <title>{{ movie.title }}</title>
 </head>
 
 <body>
-  <p>Annoit seuraavan viestin:</p>
+  <p>{{ movie.title }}</p>
   <p>{{ message }}</p>
 </body>
 
